# esme-pretrain

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
configs/: baseline_eval.json  pretrain_214m_b200.json
docs/: architecture.md  bundle-format.md  retrospective.md  status.md
docs/internal/: pipeline-walkthrough.md  pretrain-214m-b200-hardware-measurements.md  scaleup-probe.md
docs/reports/: pretrain-214m-b200-gpu-gate.md
docs/run-cards/: pretrain-214m-b200.md
openspec/custom/reviews/: branch-accepted-214m-surfaces.md
scripts/: modal_pretrain.py  modal_throughput_probe.py  plot_run_telemetry.py  pretrain_gpu_smoke.py  probe_projections.py  throughput_probe.py
src/esme_pretrain/: __init__.py  __main__.py  pretrain_run.py  status.py  torch.py
src/esme_pretrain/baselines/: __init__.py  bpb.py  config.py  harness.py  models.py  report.py  run.py
src/esme_pretrain/cli/: __init__.py  baselines.py  data.py  doctor.py  parser.py  postrun.py  pretrain.py  status.py
src/esme_pretrain/data/: __init__.py  corpus_stream.py  dataset.py  document_split.py  pilot_corpus.txt  pipeline.py
src/esme_pretrain/experiments/: __init__.py
src/esme_pretrain/launch/: __init__.py  gpu_smoke.py  modal_artifacts.py  modal_image.py  modal_pretrain_body.py  modal_tokenizer.py  pretrain.py  validators.py
src/esme_pretrain/modeling/: __init__.py  backbone.py  layers.py  (+1 more)
tests/: test_backbone.py  test_baseline_bpb.py  test_baseline_bundle.py  test_baseline_config.py  test_baseline_harness.py  test_baseline_network.py  test_baseline_report.py  test_bundle_contract.py  test_cli.py  test_data_pipeline.py  test_data_stream.py  test_dense_throughput.py  test_document_split.py  test_post_pretrain.py  test_pretrain_214m_b200.py  test_pretrain_checkpoint.py  test_pretrain_loop.py  test_status.py  test_tokenizer_dataset.py  test_tokenizer_lab.py
tests/fixtures/: local_corpus.txt  pilot_corpus.txt
(+20 files in other folders)
